--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -32,14 +32,13 @@ highlightCurrentMenuArea = false
     showHero = true
     heroStyle = "background"
     showBreadcrumbs = true
-    showDraftLabel = true
     showEdit = false
     editAppendPath = true
     seriesOpened = false
     showHeadingAnchors = true
     showPagination = true
     invertPagination = false
-    showReadingTime = true
+    showReadingTime = false
     showTableOfContents = true
     showTaxonomies = false
     showAuthorsBadges = false
