--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -23,7 +23,7 @@ weight = 4
 
 [[footer]]
 name = "Email Me"
-url = "mailto:glinek@anulab.tech"
+url = "mailto:simon@anulab.tech"
 
 [[footer]]
 name = "My Github"
