--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -14,7 +14,7 @@ logo = "logo.png"
 
 [params.author]
 name = "Simon aka. Glinek"
-image = "avatar.jpg"
+image = "avatar.png"
 headline = "Hii, I'm 19yo robotics engineering student and a maker"
 bio = "Hii, I'm 19yo robotics engineering student, currently a heavy machinery mechanic"
 links = [
